# agent-query

./: Cargo.toml  README.md  README.zh-CN.md
skills/agent-query/: SKILL.md
skills/agent-query/agents/: openai.yaml
src/: cli.rs  hotspots.rs  main.rs  output.rs
src/extract/: languages.rs  mod.rs  walker.rs
src/graph/: mod.rs  query.rs  resolve.rs  types.rs
