[package]
name = "agent-query"
version = "0.1.0"
authors = ["huxint"]
edition = "2024"

[dependencies]
anyhow = "1.0.102"
clap = { version = "4.5.60", features = ["derive"] }
ignore = "0.4"
serde = { version = "1.0.228", features = ["derive"] }
serde_json = "1.0.149"
streaming-iterator = "0.1.9"
tree-sitter = "0.26.6"
tree-sitter-bash = "0.25.1"
tree-sitter-c = "0.24.1"
tree-sitter-c-sharp = "0.23.1"
tree-sitter-cpp = "0.23.4"
tree-sitter-go = "0.25.0"
tree-sitter-java = "0.23.5"
tree-sitter-javascript = "0.25.0"
tree-sitter-php = "0.24.2"
tree-sitter-python = "0.25.0"
tree-sitter-ruby = "0.23.1"
tree-sitter-rust = "0.24.0"
tree-sitter-typescript = "0.23.2"

[profile.release]
opt-level = 3
lto = true
strip = true
